--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -47,20 +47,15 @@
     padding: 1.25rem;
     display: block;
     list-style-type: none;
+    margin-left: auto;
+    margin-right: auto;
+   
 }
 #meals-container , #reviews-container{
     display:flex;
     flex-wrap: wrap;
     flex-direction: row ;
-    margin-right: -15px;
-    margin-left: -15px;
 }
-
-/* start star rating  */
-/* .stars-inner li,
-.stars-outer {
-  padding: 10px;
-} */
 
 .stars-outer {
   position: relative;
